added text to user box, along with set places for counters.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 
     <p>Press any key to start</p>
 
-    <div>
+    <div class="div1">
     </div>
 
-    <div>
-
+    <div class="div2">
+        <p># of wins: <span id="#winning">0</span></p>
+        <p>Guesses remaining: <span id="guessesLeft"></span></p>
+        <p>Letters already guessed: <span id="alreadyGuessed"></span></p>
+        <div class="guessbox">Who am I? <span id="userGuess"></span></div>
     </div>
 
 
