started variables for computer generation, and psuedo coded what functions should do.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p># of wins: <span id="#winning">0</span></p>
         <p>Guesses remaining: <span id="guessesLeft"></span></p>
         <p>Letters already guessed: <span id="alreadyGuessed"></span></p>
-        <div class="guessbox">Who am I? <span id="userGuess"></span></div>
+        <div id="guessbox">Who am I?</div>
+        
     </div>
 
 
